# pytorch-frame

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  readthedocs.yml  tf_describe.py
.github/: CONTRIBUTING.md  dependabot.yml  labeler.yml
.github/actions/setup/: action.yml
.github/workflows/: auto-merge.yml  changelog.yml  dependabot-auto-merge.yml  documentation.yml  labeler.yml  latest_testing.yml  linting.yml  prev_testing.yml  release.yml  testing.yml
.pt_tmp/: exp_version_manager.yml
benchmark/: README.md  autogluon_benchmark.py  data_frame_benchmark.py  data_frame_text_benchmark.py  materialize_benchmark.py  pytorch_tabular_benchmark.py  resnet_example.py
benchmark/encoder/: README.md  encoder_benchmark.py
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/get_started/: handle_multimodal.rst  handle_text.rst  installation.rst  introduction.rst  load_your_own_dataset.rst  modular_design.rst
docs/source/handling_advanced_stypes/: handle_heterogeneous_stypes.rst  handle_text.rst
docs/source/modules/: config.rst  data.rst  datasets.rst  gbdt.rst  nn.rst  root.rst  transforms.rst  utils.rst
docs/source/tutorials/: modular_design.rst
examples/: .causalml.py.swp  _run_examples.sh  bcauss.py  blip.py  causalml.py  clip.py  data_frame_benchmark.py  excelformer.py  extensively_tuned_xgboost.py  ft_transformer.py  ft_transformer_text.py  fttransformer_text.py  fttransformer_with_bert.py  huggingface_dataset.py  llm_embedding.py  mercari.py  openai_embedding.py  optiver.py  optiver_excelformer  optiver_test.py  resnet.py  revisiting.py  run_examples.sh  sentence_matching.py  sklearn_api.py  stype_tutorial.py  tab_transformer.py  tabnet.py  tabpfn_classification.py  tabtransformer.py  tabular_image.py  test.py  transformers_text.py  trompt.py  trompt.sh  trompt_multi_gpu.py  tuned_catboost.py  tuned_gbdt.py  tuned_xgboost.py  tutorial.py  (+2 more)
examples/tutorials/: california_house_price.py  mercari.py
lightning_logs/version_0/: events.out.tfevents.1715586909.ip-10-0-153-205.1676053.0  events.out.tfevents.1715586916.ip-10-0-153-205.1676053.1  events.out.tfevents.1715586967.ip-10-0-153-205.1676053.2
lightning_logs/version_1/: events.out.tfevents.1715587174.ip-10-0-153-205.1680263.0  events.out.tfevents.1715587181.ip-10-0-153-205.1680263.1  events.out.tfevents.1715587243.ip-10-0-153-205.1680263.2
saved_models/: classification-3_epoch=9-valid_loss=0.36.ckpt  classification-4_epoch=9-valid_loss=0.33.ckpt
test/: conftest.py  test_stype.py
test/data/: test_cudf_integration.py  test_dataset.py  test_embedding_frame.py  test_loader.py  test_mapper.py  test_multi_embedding_tensor.py  test_multi_nested_tensor.py  test_pytree.py  test_rusty.py  test_stats.py  test_tensor_frame.py
test/datasets/: test_adult_census_income.py  test_custom_dataset.py  test_data_frame_benchmark.py  test_data_frame_openml.py  test_data_frame_text_benchmark.py  test_fake_dataset.py  test_huggingface_dataset.py  test_movielens_1m.py  test_multimodel_text_benchmark.py  test_titanic.py  test_torch_frame_datasets.py
test/gbdt/: test_catboost.py  test_gbdt.py  test_xgboost.py
test/nn/: test_scaffold.py  test_simple_basecls.py
test/nn/conv/: test_excelformer_conv.py  test_ft_transformer.py  test_ft_transformer_backbone.py  test_ft_transformer_conv.py  test_ft_transformer_convs.py  test_tab_transformer_conv.py  test_trompt_conv.py
test/nn/decoder/: test_excelformer_decoder.py  test_excelformer_predictionhead.py  test_trompt_decoder.py  test_trompt_downstream.py
test/nn/encoder/: test_stype_encoder.py  test_stypewise_encoder.py
test/nn/encoding/: test_cyclic_encoding.py  test_positional_encoding.py
test/nn/models/: test_compile.py  test_excelformer.py  test_ft_transformer.py  test_mlp.py  test_resnet.py  (+3 more)
test/transforms/: cat_to_num_transform.py  test_cat_to_num_transform.py  test_categorical_catboost_encoder.py  test_hidden_mix.py  test_missing_values_imputer.py  test_mutual_information_sort.py  test_ordered_target_statistics_encoder.py
test/utils/: test_concat.py  test_dataframe_compat.py  test_infer_stype.py  test_io.py  test_memory.py  test_skorch.py  test_split.py  test_utils.py
torch_frame/: __init__.py  _dataframe_compat.py  _stype.py  stype.py  tensor_encoder.py  typing.py
torch_frame/config/: __init__.py  image_embedder.py  model.py  text_embedder.py  text_model.py  text_tokenizer.py
torch_frame/data/: __init__.py  _pytree.py  dataset.py  download.py  embedding_frame.py  loader.py  mapper.py  multi_embedding_tensor.py  multi_nested_tensor.py  multi_tensor.py  rusty.py  stats.py  tensor_frame.py
torch_frame/datasets/: __init__.py  adult_census_income.py  amazon_fine_food_reviews.py  amphibians.py  bank_marketing.py  custom.py  data_frame_benchmark  data_frame_benchmark.py  data_frame_text_benchmark.py  diamond_images.py  dota2.py  fake.py  forest_cover_type.py  house_price_and_images.py  huggingface_dataset.py  ihdp.py  jobs.py  kdd_census_income.py  mercari.py  movielens_1m.py  multimodal_text_benchmark.py  mushroom.py  openml_dataset.py  poker_hand.py  quora_question_pairs.py  tabular_benchmark.py  titanic.py  torch_frame_datasets.py  yandex.py
torch_frame/encoder/: __init__.py  encoder.py
torch_frame/gbdt/: __init__.py  extensively_tuned_xgboost.py  gbdt.py  tuned_catboost.py  tuned_lightgbm.py  tuned_xgboost.py
torch_frame/nn/: __init__.py  base.py
torch_frame/testing/: __init__.py  decorators.py  image_embedder.py  text_embedder.py  text_tokenizer.py
torch_frame/transforms/: __init__.py  base_transform.py  cat_to_num_transform.py  categorical_catboost_encoder.py  encode_categorical_features.py  fittable_base_transform.py  hidden_mix.py  missing_values_imputer.py  mutual_information_sort.py  ordered_target_statistics_encoder.py  post_embedding_transform.py  sort_features_based_on_mutual_information.py
torch_frame/utils/: __init__.py  compare.py  concat.py  dataframe_compat.py  infer_stype.py  initialization_methods.py  io.py  memory.py  skorch.py  split.py  utils.py
(+46 files in other folders)
